# lymap

./: Cargo.toml  Makefile  README.md  build.sh  lymap.desktop
docs/: GLOBAL_KEYBINDS.md  INSTALL.md  USAGE.md
examples/: 4K_rhythm.json  celeste.json
src/: main.rs
src/cache/: load.rs  mod.rs  model.rs  write.rs
src/config/: create.rs  mod.rs  models.rs
src/ui/: buttons.rs
src/utils/: colour.rs  config_path.rs  env_variables.rs  mod.rs
