[package]
name = "lymap"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
env_logger = "0.10.2"
log = "0.4.20"
macroquad = "0.4.4"
native-dialog = "0.7.0"
serde = { version = "1.0.159" , features = ["derive"] }
serde_json = "1.0.111"
